got most of the first crack of js working. Just some bugs, polishing and refactoring to do

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/dist/main.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   </head>
   <body>
     <div class="w80 center">
@@ -11,15 +12,16 @@
       <div class="w60 center easy-credit">
         <form action="" class="credit-card">
           <div class="card-image-wrapper">
-            <div class="card-image default">
+            <div class="card-image unknown active">
               <div class="gloss"></div>
               <span class="w100 centered card-number">5423 2315 1234 4496</span>
               <span class="w50 card-name">John Doe</span>
               <span class="w50 card-date">07/14</span>
             </div>
-            <div class="card-image default-2 hidden">
+            <div class="card-image back">
               <div class="gloss"></div>
               <div class="bar w100"></div>
+              <div class="ccv"></div>
             </div>
             <div class="card-image mastercard hidden">
               <div class="gloss"></div>
@@ -44,16 +46,15 @@
             </div>
           </div>
           <div class="input-wrapper w100">
-            <input type="numeric" class="card-number w80" name="card-number" required pattern="[0-9]{13,16}" placeholder="**** **** **** ****">
-            <input type="numeric" class="card-month-expiry w20" name="card-month-expiry" required pattern="[0-9]{2}" placeholder="MM">
-            <input type="numeric" class="card-year-expiry w20" name="card-year-expiry" required pattern="[0-9]{2}" placeholder="YY">
-            <input type="numeric" class="card-ccv w20" name="card-ccv" required pattern="[0-9]{3,4}" placeholder="***">
+            <input type="numeric" class="card-number w80" name="card-number" autocompletetype="card-number" placeholder="**** **** **** ****" required>
+            <input type="numeric" class="card-expiry w40" name="card-expiry" placeholder="MM / YY" required>
+            <input type="numeric" class="card-ccv w30" name="card-ccv" placeholder="CCV" autocomplete="off" required>
           </div>
-          <button type="submit" class="btn">Pay</button>
+          <button type="submit" class="btn disabled">Pay</button>
         </form>
       </div>
     </div>
 
-    <script src="/dist/index.js" type="text/javascript"></script>
+    <script src="/dist/easy-credit.min.js" type="text/javascript"></script>
   </body>
 </html>
